--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,7 +8,7 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selectio
 RUN apt-get update -y
 
 RUN apt-get update -y \
- && apt-get install -y apt-utils git curl wget ca-certificates bzip2 cmake tree htop bmon iotop g++ \
+ && apt-get install -y apt-utils git curl wget ca-certificates bzip2 cmake vim tree htop bmon iotop g++ libgl1-mesa-glx \
  && apt-get install -y libglib2.0-0 libsm6 libxext6 libxrender-dev
 
 RUN wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh \
@@ -28,22 +28,13 @@ ENV PATH=$CONDA_PREFIX/bin:$PATH
 ENV CONDA_AUTO_UPDATE_CONDA=false
 
 RUN conda install -y ipython
-RUN pip install ninja yacs cython matplotlib opencv-python tqdm
+RUN pip install ninja yacs cython matplotlib opencv-python tqdm pycocotools scikit-learn
 
 ARG CUDA
 RUN conda install pytorch torchvision torchaudio cudatoolkit=${CUDA} -c pytorch -c nvidia -y\
 && conda clean -ya
 
-# Install TorchVision master
-# RUN git clone https://github.com/pytorch/vision.git \
-#  && cd vision \
-#  && python setup.py install
+RUN git clone https://github.com/jooeunkiim/e8
 
-# install pycocotools
-# RUN git clone https://github.com/cocodataset/cocoapi.git \
-#  && cd cocoapi/PythonAPI \
-#  && python setup.py build_ext install
+WORKDIR /e8
 
-RUN git clone https://github.com/crazyboy9103/e8ight 
-
-WORKDIR /e8ight
