--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,7 +28,7 @@ ENV PATH=$CONDA_PREFIX/bin:$PATH
 ENV CONDA_AUTO_UPDATE_CONDA=false
 
 RUN conda install -y ipython
-RUN pip install ninja yacs cython matplotlib opencv-python tqdm pycocotools scikit-learn
+RUN pip install ninja yacs cython matplotlib opencv-python tqdm pycocotools scikit-learn openpyxl
 
 ARG CUDA
 RUN conda install pytorch torchvision torchaudio cudatoolkit=${CUDA} -c pytorch -c nvidia -y\
